fix issue with search form on smaller window width

--- a/src/main/front-end/app/less/document-view.less
+++ b/src/main/front-end/app/less/document-view.less
@@ -22,6 +22,32 @@ body#document-view {
   height: @document-view-footer-height;
   bottom: 0;
   border-top: 1px solid @border-color;
+  
+  form {
+    margin-top: 10px;
+    
+    .query-input {
+      display: inline-block;
+      width: 75%;
+      max-width: 180px;
+      vertical-align: middle;
+    }
+    
+    .search-button-label {
+      display: none;
+    }
+    
+    @media (min-width: 768px) {
+      .query-input {
+        width: 25%;
+        max-width: none;  
+      }
+      
+      .search-button-label {
+        display: inline;
+      }
+    }
+  }
 }
 
 #document-view-main {
@@ -39,7 +65,7 @@ body#document-view {
   }
   
   .document-view-text {
-    min-height: 100%;
+  
   }
   
   @media (min-width: 768px) {
@@ -60,6 +86,7 @@ body#document-view {
     .document-view-text {
       background-color: @light-grey-background-color;
       border-left: 1px dashed @border-color;
+      min-height: 100%;
     }
   }
 }
